changed links in comp with computers in comp play

--- a/Seminars/Composing with Computers 1.html
+++ b/Seminars/Composing with Computers 1.html
@@ -57,13 +57,11 @@ Pan2.ar(Gendy1.ar(6.rand,6.rand,1.0.rand,1.0.rand,freq ,freq, 1.0.rand, 1.0.rand
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.010.png'/></div>
 
-<p><pre class='code prettyprint lang-sc'>Computer.url("https://youtu.be/hdzc-vsfRew");</pre>
+<p><pre class='code prettyprint lang-sc'>"open https://youtu.be/co9Q5BZDunI".unixCmd;</pre>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.011.png'/><br><b>Koan Pro and Generative Music 1 - intermorphic.com, iomoio.com</b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.012.png'/></div>
-
-<p><pre class='code prettyprint lang-sc'>Computer.url("https://youtu.be/ccjhAGJxL-w?list=PL6mJS-_ZqwRQ3F4_nhAHl_V_SmVXL0sHA");</pre>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.013.png'/><br><b>intermorphic.com/sseyo/koan/generativemusic1/</b></div>
 
@@ -231,22 +229,20 @@ b.free;</pre>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.023.png'/></div>
 
-<p><pre class='code prettyprint lang-sc'>Computer.url("https://youtu.be/Gq5B3M4jRtQ");</pre>
+<p><pre class='code prettyprint lang-sc'>"open https://youtu.be/Gq5B3M4jRtQ".unixCmd;</pre>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.024.png'/><br><b>Grout and Palisca, 1996, A History of Western Music. 5th ed.</b></div>
 
-<p><strong>Josquin Desprez</strong> (c.1450-1521) - <em>De profundis</em><pre class='code prettyprint lang-sc'>Computer.url("https://youtu.be/An6r1KDD_S0");</pre>
+<p><strong>Josquin Desprez</strong> (c.1450-1521) - <em>De profundis</em><pre class='code prettyprint lang-sc'>"open https://youtu.be/An6r1KDD_S0".unixCmd;</pre>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.025.png'/></div>
 <div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.026.png'/></div>
 
-<p><pre class='code prettyprint lang-sc'>Computer.url("https://youtu.be/uH0SX8Knseo"); //Duffay
-Computer.url("https://youtu.be/KHNMgDIk1QI"); //L’homme armé
-Computer.url("https://youtu.be/68N791msDt0"); //Missa l’Homme Armé</pre>
+<p><pre class='code prettyprint lang-sc'>"open https://youtu.be/uH0SX8Knseo".unixCmd; //Duffay
+"open https://youtu.be/KHNMgDIk1QI".unixCmd; //L’homme armé
+"open https://youtu.be/68N791msDt0".unixCmd; //Missa l’Homme Armé</pre>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.027.png'/></div>
-
-<p><pre class='code prettyprint lang-sc'>Computer.url("http://oregonbachfestival.com/digital-bach-project/cuepoints/goldberg-variations");</pre>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.028.png'/></div>
 
@@ -426,19 +422,19 @@ Pbind(\midinote, Pseq(~inversions.postln+48,inf), \ctranspose, Pseq(~circleTriad
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.035.png'/></div>
 
-<p><pre class='code prettyprint lang-sc'>Computer.url("http://sunsite.univie.ac.at/Mozart/dice/");</pre>
+<p><pre class='code prettyprint lang-sc'>"open http://sunsite.univie.ac.at/Mozart/dice/".unixCmd;</pre>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.036.png'/><br><b>David Cope - alchetron.com</b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.037.png'/></div>
 
-<p><pre class='code prettyprint lang-sc'>Computer.url("http://youtu.be/yFImmDsNGdE?t=45s"); //Tech Closeup TV
-Computer.url("http://youtu.be/t6WeiyvAiYQ"); //Chopin style
-Computer.url("http://youtu.be/R-_9zSSQK3o"); //Joplin style</pre>
+<p><pre class='code prettyprint lang-sc'>"open http://youtu.be/yFImmDsNGdE?t=45s".unixCmd; //Tech Closeup TV
+"open http://youtu.be/t6WeiyvAiYQ".unixCmd; //Chopin style
+"open http://youtu.be/R-_9zSSQK3o".unixCmd; //Joplin style</pre>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.038.png'/><br><b>Generative Music 1 at the Science Museum - wikipedia.org</b></div>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar2/seminar2.039.png'/></div>
 
-<p><pre class='code prettyprint lang-sc'>Computer.url("https://youtu.be/7qEu0kuoKEQ");</pre>
+<p><pre class='code prettyprint lang-sc'>"open https://youtu.be/7qEu0kuoKEQ".unixCmd;</pre>
 <div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ComputerPlay/HelpSource/Seminars/Composing with Computers 1.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ComputerPlay/HelpSource/Seminars/Composing with Computers 1.schelp</a><br>link::Seminars/Composing with Computers 1::<br>sc version: 3.8.0</div></div></body></html>
