--- a/Seminars/Composing with Computers 2.html
+++ b/Seminars/Composing with Computers 2.html
@@ -441,20 +441,20 @@ m = MarkovSetN.fill(100, Pseq([1, 2, 3, 4, Prand([5, 55, 555])], inf).asStream, 
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.024.png'/></div>
 
-<p><pre class='code prettyprint lang-sc'>Computer.url("http://youtu.be/n0njBFLQSk8"); //Experiment 1</pre>
+<p><pre class='code prettyprint lang-sc'>"open http://youtu.be/n0njBFLQSk8".unixCmd; //Experiment 1</pre>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.025.png'/></div>
 
-<p><pre class='code prettyprint lang-sc'>Computer.url("http://youtu.be/MrN0pOnA1x4"); //Experiment 2
-Computer.url("http://youtu.be/cuq4smO_4Js"); //Experiment 3</pre>
+<p><pre class='code prettyprint lang-sc'>"open http://youtu.be/MrN0pOnA1x4".unixCmd; //Experiment 2
+"open http://youtu.be/cuq4smO_4Js".unixCmd; //Experiment 3</pre>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.026.png'/><br><b>Lejaren Hiller - computermusicblog.com</b></div>
 
-<p><pre class='code prettyprint lang-sc'>Computer.url("http://youtu.be/QyqiSbbwHIs"); //Experiment 4</pre>
+<p><pre class='code prettyprint lang-sc'>"open http://youtu.be/QyqiSbbwHIs".unixCmd; //Experiment 4</pre>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.027.png'/><br><b>John Cage and Lejaren Hiller - musicainformatica.org</b></div>
 
-<p><pre class='code prettyprint lang-sc'>Computer.url("https://youtu.be/t_hTxJpWITw");</pre>
+<p><pre class='code prettyprint lang-sc'>"open https://youtu.be/t_hTxJpWITw".unixCmd;</pre>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.028.png'/><br><b>Iannis Xenakis - pinimg.com</b></div>
 
@@ -462,15 +462,15 @@ Computer.url("http://youtu.be/cuq4smO_4Js"); //Experiment 3</pre>
 <div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.030.png'/></div>
 <div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.031.png'/><br><b>Achorripsis - 4.bp.blogspot.com</b></div>
 
-<p><pre class='code prettyprint lang-sc'>Computer.url("https://youtu.be/RHQM2-MMXzY");</pre>
+<p><pre class='code prettyprint lang-sc'>"open https://youtu.be/RHQM2-MMXzY".unixCmd;</pre>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.032.png'/><br><b>St/4 - musicengraving.de</b></div>
 
-<p><pre class='code prettyprint lang-sc'>Computer.url("http://youtu.be/9KsWpuqTYLU");</pre>
+<p><pre class='code prettyprint lang-sc'>"open http://youtu.be/9KsWpuqTYLU".unixCmd;</pre>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.033.png'/><br><b>Speaker layout for Analogique B - granularsynthesis.com</b></div>
 
-<p><pre class='code prettyprint lang-sc'>Computer.url("https://youtu.be/mXIJO-af_u8");</pre>
+<p><pre class='code prettyprint lang-sc'>"open https://youtu.be/mXIJO-af_u8".unixCmd;</pre>
 
 <p><div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.034.png'/></div>
 <div class='image'><img src='http://www.squib-box.com/fr/computerdotplay/seminars/seminar4/seminar 4.035.png'/></div>
