added link to computer play main page

--- a/Computer.html
+++ b/Computer.html
@@ -130,7 +130,7 @@
 <li><a href="./Study Guides/SC Basics Quick Study.html">SC Basics Quick Study</a><li><a href="./Study Guides/Deconstructing SC code.html">Deconstructing SC code</a><li><a href="./Study Guides/Digital Audio.html">Digital Audio</a><li><a href="./Study Guides/Digital Synthesis.html">Digital Synthesis</a><li><a href="./Study Guides/Audio Analysis and Machine Listening.html">Audio Analysis and Machine Listening</a></ul>
 
 <p><dt>Code Examples<dd><ul>
-<li><a href="./Code Examples/Code for Fun.html">Code for Fun</a><li><a href="./Code Examples/MIDI Fun.html">MIDI Fun</a><li><a href="./Code Examples/FX Fun.html">FX Fun</a><li><a href="./Code Examples/Synth Fun.html">Synth Fun</a><li><a href="./Code Examples/Buffer Tricks.html">Buffer Tricks</a><li><a href="./Code Examples/MIDI Synthesiser.html">MIDI Synthesiser</a></ul>
+<li><a href="./Code Examples/Code for Fun.html">Code for Fun</a><li><a href="./Code Examples/MIDI Fun.html">MIDI Fun</a><li><a href="https://freuben.github.io/york/SSfMT/Code%20Examples/MIDI%20File%20Fun.html">MIDI File Fun</a><li><a href="./Code Examples/FX Fun.html">FX Fun</a><li><a href="./Code Examples/Synth Fun.html">Synth Fun</a><li><a href="./Code Examples/Buffer Tricks.html">Buffer Tricks</a><li><a href="./Code Examples/MIDI Synthesiser.html">MIDI Synthesiser</a></ul>
 </dl>
 <h2><a class='anchor' name='Register'>Register</a></h2>
 
