--- a/SSfMT/Handbook.html
+++ b/SSfMT/Handbook.html
@@ -106,12 +106,12 @@
 <h3><a class='anchor' name='Resources'>Resources</a></h3>
 
 <p><strong>Library</strong>: You will be expected to research and write a technical report for this module and this will require finding academic sources (books, journals, etc.) at the library. Online library resources: The library provides a series of online resources that you can access through the library website. You can reach the website by following this <a href="http://www.york.ac.uk/library/">link</a>.
-<p><a href="http://subjectguides.york.ac.uk/az.php">E-resources</a> include a large collection of useful <a href="http://yorsearch.york.ac.uk/primo_library/libweb/action/dlSearch.do?&institution=44YORK&azSearch=true&fn=almaAzSearch&query=facet_atoz%2Cexact%2CA">e-journal</a> articles and <a href="http://subjectguides.york.ac.uk/c.php?g=484076&p=3310241">e-books</a> as well as other great music resources including streamable audio and video, electronic scores and databases that you can find by following this <a href="http://subjectguides.york.ac.uk/c.php?g=484041&p=3547049">link.</a>
-<p><strong>Software</strong>: For this module, you will need to download two pieces of software: <em>VCV Rack</em> and <em>SuperCollider</em>. They are both open source and free!
+<p><a href="http://subjectguides.york.ac.uk/az.php">E-resources</a> include a large collection of useful e-journal articles and e-books as well as other great music resources including streamable audio and video, electronic scores and databases that you can find by following this <a href="http://subjectguides.york.ac.uk/c.php?g=484041&p=3547049">link.</a>
+<p><strong>Software</strong>: For this module, you will need to download two pieces of software: VCV Rack and SuperCollider. They are both open source and free!
 <p><strong>VCV Rack</strong>
-<p>You can download <em>VCV Rack</em> <a href="https://vcvrack.com/">here</a>.
-<p>You should also download and install the third-party plugins, which you can find <a href="https://github.com/VCVRack/Rack/wiki/List-of-plugins">here</a>.
-<p>The instuctions install the plugins can be found <a href="https://github.com/VCVRack/Rack/wiki/Installing-Plugins">here</a>. For Mac, you'll have to go to folder where the application is and press <em>ctr+click</em> on the <strong>Rack</strong> icon - then select <em>Show Package Contents</em>, this will open a folder in the finder. Then go to: <em>Contents-&gt;Resources-&gt;plugins</em>. Then unzip the <em>VCV Rack</em> plugins and drop the unzipped folder contents into the <em>Contents/Resources/plugins</em> folder.
+<p>You'll need to create a VCV account to downlaod and install VCV Rack and its plugins.
+<p>You can download VCV Rack <a href="https://vcvrack.com/">here</a>.
+<p>You should also install the plugins, which you can find <a href="https://github.com/VCVRack/Rack/wiki/List-of-plugins">here</a>.
 <p>Go to <a href="./../SSfMT/Handbook.html#VCV%20Rack%20and%20Modular%20Links">VCV Rack and Modular Links</a> for free patches and other interesting information.
 <p><strong>SuperCollider</strong>
 <p>In this module, you'll learn how to work with the SuperCollider programming language. SuperCollider is free and you can download the latest version <a href="http://supercollider.github.io/download">here</a>.
@@ -130,7 +130,6 @@
 <p>Additionally, you might want to install some third-party packages called <a href="./../Classes/Quarks.html">Quarks</a>.
 <p>Go to <a href="./../SSfMT/Handbook.html#SuperCollider%20Links">SuperCollider Links</a> for code examples and other interesting information.
 <p><strong>Other software</strong>
-<p>You will need to use an application to send audio between different software applications for your first project. For this, you can use <a href="https://soundflower.en.softonic.com/mac">SoundFlower</a> (Mac only), or <a href="http://jackaudio.org/downloads/">JACK</a> (Win, Linux, Mac) or <a href="https://virtual-audio-cable.en.softonic.com/">Virtual Audio Cable</a> (Windows).
 <p>You might also want to use other software applications in this module.
 <p>Here are some suggestions of software you might want to use:<ul>
 <li>Digital Audio Workstations (recording, editing, MIDI and processing):<ul>
@@ -173,5 +172,5 @@
 <li><a href="http://www.audiosynth.com/">Original SuperCollider page by James McCartney</a><li><a href="http://supercollider.github.io/pages">SuperCollider Wiki</a><li><a href="http://supercollider.github.io/community/mailing-lists">SuperCollider Mailing List - sc-users</a><li><a href="http://sccode.org/">SuperCollider code</a><li><a href="https://twitter.com/search?q=%23sc140 & open https://twitter.com/sc140tweets">sctweets</a></ul>
 <h3><a class='anchor' name='VCV%20Rack%20and%20Modular%20Links'>VCV Rack and Modular Links</a></h3>
 <ul>
-<li><a href="https://patchstorage.com/platform/vcv-rack/">VCV Rack Patches</a><li><a href="https://www.autodafe.net/virtual-instruments/vcv-rack-modules.html">Audiodafe modules</a><li><a href="https://learningmodular.com/">Learning Modular</a><li><a href="https://mutable-instruments.net/">Mutable Instruments</a><li><a href="https://www.befaco.org">Befaco</a><li><a href="http://synthtech.com/">Synthesis Technology</a></ul>
+<li><a href="https://patchstorage.com/platform/vcv-rack/">VCV Rack Patches</a><li><a href="https://learningmodular.com/">Learning Modular</a><li><a href="https://mutable-instruments.net/">Mutable Instruments</a><li><a href="https://www.befaco.org">Befaco</a><li><a href="http://synthtech.com/">Synthesis Technology</a></ul>
 <div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Handbook.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT/Handbook.schelp</a><br>link::SSfMT/Handbook::<br>sc version: 3.8.0</div></div></body></html>
