updated submission info

--- a/SSfMT/Handbook.html
+++ b/SSfMT/Handbook.html
@@ -97,12 +97,14 @@
 <li><strong>Software (50%)</strong>: Tuesday, 14 April 2020 before 16:00.<li><strong>Technical Report (40%)</strong>: Tuesday, 14 April 2020 before 16:00.<li><strong>Presentation / Performance (10%)</strong>: Wednesday, 22 April 2020, event from 9:15-13:15.</ul>
 <h3><a class='anchor' name='Submission'>Submission</a></h3>
 
-<p>You will submit your work through our online submission system via the <a href="https://dropoff.york.ac.uk">DropOff Service</a>. This will include all of the files for the Software System (code and supporting materials) and PDF files containing the technical report. Whatever form your assessment takes, you must pay attention to all aspects of presentation, including the material appearance of your work.
-<p>All of your submitted work should be named in the following format:
-<p><strong>Folder name: ExamNumber_ModuleTitle File name: ExamNumber_ModuleTitle_AssessmentType</strong>
-<p>So, for example, your file name might look like: <strong>Y1234567_SoftwareSystemsForMusicTechnology</strong>.
+<p>You will submit your work through our online submission system via the <a href="https://deposit.york.ac.uk/">Deposit Service</a>. This will include all of the files for the Software System (code and supporting materials) and PDF files containing the technical report. Whatever form your assessment takes, you must pay attention to all aspects of presentation, including the material appearance of your work.
+<p>You must create your zipped folder before using the Deposit Service.
+<p>Your zipped file should be named in the following format:
+<p><strong>ExamNumber_ModuleTitle</strong>
+<p>For example, your file name might look like: <strong>Y1234567_SoftwareSystemsForMusicTechnology</strong>.
+<p>Please include your exam number (and not your name) in the name of each document you include in your zipped file. For example, <strong>Y1234567_code</strong>.
 <p>To use the DropOff service, you need to submit all your work as a zipped folder. You must create this before using the DropOff service.
-<p>For a detailed explanation of how to submit your work please read the <a href="https://www.york.ac.uk/media/music/documents/handbooks/Music%20Department%20Guide%20to%20Assessment%20Submission.pdf">Music Department Guide to Assessment Submission</a>.<h2><a class='anchor' name='Course%20Materials'>Course Materials</a></h2>
+<p>For a detailed explanation of how to submit your work please read the <a href="https://www.york.ac.uk/media/music/documents/handbooks/Music%20Department%20Guide%20to%20Assessment%20Submission%2019_20.pdf">Music Department Guide to Assessment Submission</a>.<h2><a class='anchor' name='Course%20Materials'>Course Materials</a></h2>
 <h3><a class='anchor' name='Resources'>Resources</a></h3>
 
 <p><strong>Library</strong>: You will be expected to research and write a technical report for this module and this will require finding academic sources (books, journals, etc.) at the library. Online library resources: The library provides a series of online resources that you can access through the library website. You can reach the website by following this <a href="http://www.york.ac.uk/library/">link</a>.
