update on assignment briefs

--- a/SSfMT/Assignment Briefs.html
+++ b/SSfMT/Assignment Briefs.html
@@ -30,14 +30,14 @@
 <h3><a class='anchor' name='Formative%20Assessment'>Formative Assessment</a></h3>
 <ol>
 <li><a href="./../SSfMT/Assignments/Seminar Presentation.html">Seminar Presentation</a>
-<p><strong>Deadline</strong>: Friday, 26 November 2018, from 9:30-13:15 (in class).</ol>
+<p><strong>Deadline</strong>: Monday, 2 December 2019, from 13:30-17:30 (in-class).</ol>
 
 <p><h3><a class='anchor' name='Summative%20Assessment'>Summative Assessment</a></h3>
 <ol>
 <li><a href="./../SSfMT/Assignments/Software System.html">Software System</a> (50%)
-<p><strong>Deadline</strong>: Monday, 15 April 2019, by 16:00.<li><a href="./../SSfMT/Assignments/Technical Report.html">Technical Report</a> (40%)
-<p><strong>Deadline</strong>: Monday, 15 April 2019, by 16:00.<li><a href="./../SSfMT/Assignments/Presentation.html">Presentation/Concert</a> (10%)
-<p><strong>Deadline</strong>: Friday, 26 April 2019, event from 9:15-13:15.</ol>
+<p><strong>Deadline</strong>: Tuesday, 14 April 2020 before 16:00.<li><a href="./../SSfMT/Assignments/Technical Report.html">Technical Report</a> (40%)
+<p><strong>Deadline</strong>: Tuesday, 14 April 2020 before 16:00.<li><a href="./../SSfMT/Assignments/Presentation.html">Presentation/Concert</a> (10%)
+<p><strong>Deadline</strong>: Wednesday, 22 April 2020, event from 9:15-13:15.</ol>
 
 <p><h3><a class='anchor' name='Assessment%20Criteria'>Assessment Criteria</a></h3>
 <ul>
