corrected small mistake in handbook

--- a/SSfMT/Handbook.html
+++ b/SSfMT/Handbook.html
@@ -103,7 +103,7 @@
 <p><strong>ExamNumber_ModuleTitle</strong>
 <p>For example, your file name might look like: <strong>Y1234567_SoftwareSystemsForMusicTechnology</strong>.
 <p>Please include your exam number (and not your name) in the name of each document you include in your zipped file. For example, <strong>Y1234567_code</strong>.
-<p>To use the DropOff service, you need to submit all your work as a zipped folder. You must create this before using the DropOff service.
+<p>To use the Deposit Service, you need to submit all your work as a zipped folder. You must create this before using the Deposit Service.
 <p>For a detailed explanation of how to submit your work please read the <a href="https://www.york.ac.uk/media/music/documents/handbooks/Music%20Department%20Guide%20to%20Assessment%20Submission%2019_20.pdf">Music Department Guide to Assessment Submission</a>.<h2><a class='anchor' name='Course%20Materials'>Course Materials</a></h2>
 <h3><a class='anchor' name='Resources'>Resources</a></h3>
 
