change in moduleplan

--- a/SSfMT.html
+++ b/SSfMT.html
@@ -24,10 +24,10 @@
 <ul class='toc'><li class='toc1'><a href='#Module'>Module</a></li>
 <ul class='toc'><li class='toc2'><a href='#Module%20Information'>Module Information</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Lectures'>Lectures</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Practicals'>Practicals</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Formative%20Tasks'>Formative Tasks</a></li>
-<ul class='toc'></ul><li class='toc2'><a href='#Study%20Guides'>Study Guides</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#SuperCollider%20Resources'>SuperCollider Resources</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Code%20Examples'>Code Examples</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Study%20Guides'>Study Guides</a></li>
 <ul class='toc'></ul></ul><li class='toc1'><a href='#Links'>Links</a></li>
 <ul class='toc'></ul></ul></div><h2><a class='anchor' name='Module'>Module</a></h2>
 <h3><a class='anchor' name='Module%20Information'>Module Information</a></h3>
@@ -36,22 +36,23 @@
 
 <p><h3><a class='anchor' name='Lectures'>Lectures</a></h3>
 <ul>
-<li><a href="./SSfMT/Lectures/Introduction to Module.html">Introduction to Module</a><li><a href="./SSfMT/Practicals/Modular Synthesis 1.html">Modular Synthesis 1</a><li><a href="./SSfMT/Practicals/Modular Synthesis 2.html">Modular Synthesis 2</a><li><a href="./SSfMT/Lectures/Introduction to Programming.html">Introduction to Programming</a><li><a href="./SSfMT/Lectures/Computer Music.html">Computer Music</a><li><a href="./SSfMT/Lectures/Digital Synthesis.html">Digital Synthesis</a><li><a href="./SSfMT/Lectures/Digital Effects.html">Digital Effects</a><li><a href="./SSfMT/Lectures/Human-Computer Interaction.html">Human-Computer Interaction</a></ul>
-
-<p><h3><a class='anchor' name='Practicals'>Practicals</a></h3>
-<ul>
-<li><a href="./SSfMT/Practicals/Programming Concepts 1.html">Programming Concepts 1</a><li><a href="./SSfMT/Lectures/Programming Concepts 2.html">Programming Concepts 2</a><li><a href="./SSfMT/Practicals/Playing with UGens 1.html">Playing with UGens 1</a><li><a href="./SSfMT/Practicals/Playing with UGens 2.html">Playing with UGens 2</a><li><a href="./SSfMT/Practicals/Scheduling and Patterns.html">Scheduling and Patterns</a><li><a href="./SSfMT/Practicals/Buses and Ndefs.html">Buses and Ndefs</a><li><a href="./SSfMT/Practicals/Interfacing.html">Interfacing</a><li><a href="./SSfMT/Practicals/Organising your Code.html">Organising your Code</a></ul>
+<li><a href="./SSfMT/Lectures/Introduction to Module.html">Introduction to Module</a><li><a href="./SSfMT/Practicals/Modular Synthesis 1.html">Modular Synthesis 1</a><li><a href="./SSfMT/Practicals/Modular Synthesis 2.html">Modular Synthesis 2</a><li><a href="./SSfMT/Practicals/Programming Concepts 1.html">Programming Concepts 1</a><li><a href="./SSfMT/Lectures/Programming Concepts 2.html">Programming Concepts 2</a><li><a href="./SSfMT/Practicals/Playing with UGens 1.html">Playing with UGens 1</a><li><a href="./SSfMT/Practicals/Playing with UGens 2.html">Playing with UGens 2</a><li><a href="./SSfMT/Practicals/Scheduling and Patterns.html">Scheduling and Patterns</a><li><a href="./SSfMT/Practicals/Buses and Ndefs.html">Buses and Ndefs</a><li><a href="./SSfMT/Practicals/Interfacing.html">Interfacing</a><li><a href="./SSfMT/Practicals/Organising your Code.html">Organising your Code</a></ul>
 
 <p><h3><a class='anchor' name='Formative%20Tasks'>Formative Tasks</a></h3>
 <ul>
-<li><a href="./SSfMT/Tasks/Task 1.html">Task 1</a> - Due 25/11<li><a href="./SSfMT/Tasks/Task 2.html">Task 2</a> - Due 2/12<li><a href="./SSfMT/Tasks/Task 3.html">Task 3</a> - Due 15/1<li><a href="./SSfMT/Tasks/Task 4.html">Task 4</a> - Due 16/1<li><a href="./SSfMT/Tasks/Task 5.html">Task 5</a> - Due 22/1<li><a href="./SSfMT/Tasks/Task 6.html">Task 6</a> - Due 5/2<li><a href="./SSfMT/Tasks/Task 7.html">Task 7</a> - Due 12/2<li><a href="./SSfMT/Tasks/Task 8.html">Task 8</a> - Due 19/2<li><a href="./SSfMT/Tasks/Task 9.html">Task 9</a> - Due 4/3</ul>
+<li><a href="./SSfMT/Tasks/Task 1.html">Task 1</a> - Due 25/11<li><a href="./SSfMT/Tasks/Task 2.html">Task 2</a> - Due 2/12<li><a href="./SSfMT/Tasks/Task 3.html">Task 3</a> - Due 14/1</ul>
+
+<p><h3><a class='anchor' name='SuperCollider%20Resources'>SuperCollider Resources</a></h3>
+<ul>
+<li><a href="./SSfMT/Study Guides/Synthesis in SuperCollider.html">Synthesis in SuperCollider</a><li><a href="./SSfMT/Lectures/Digital Synthesis.html">Digital Synthesis</a><li><a href="./SSfMT/Lectures/Digital Effects.html">Digital Effects</a><li><a href="./SSfMT/Study Guides/Buffer Tricks.html">Buffer Tricks</a></ul>
+
+<p><h3><a class='anchor' name='Code%20Examples'>Code Examples</a></h3>
+<ul>
+<li><a href="./SSfMT/Code Examples/Code for Fun.html">Code for Fun</a><li><a href="./SSfMT/Code Examples/MIDI Out Fun.html">MIDI Out Fun</a><li><a href="./SSfMT/Code Examples/MIDI File Fun.html">MIDI File Fun</a><li><a href="./SSfMT/Code Examples/Simple FX.html">Simple FX</a><li><a href="./SSfMT/Code Examples/Synth Fun.html">Synth Fun</a><li><a href="./SSfMT/Code Examples/MIDI Synthesiser.html">MIDI Synthesiser</a><li><a href="./SSfMT/Code Examples/Mixing Things.html">Mixing Things</a></ul>
 
 <p><h3><a class='anchor' name='Study%20Guides'>Study Guides</a></h3>
 <ul>
-<li><a href="./SSfMT/Study Guides/Synthesis in SuperCollider.html">Synthesis in SuperCollider</a><li><a href="./SSfMT/Study Guides/SC Basics Quick Study.html">SC Basics Quick Study</a><li><a href="./SSfMT/Study Guides/Deconstructing SC code.html">Deconstructing SC code</a><li><a href="./SSfMT/Study Guides/Buffer Tricks.html">Buffer Tricks</a></ul>
-<h3><a class='anchor' name='Code%20Examples'>Code Examples</a></h3>
-<ul>
-<li><a href="./SSfMT/Code Examples/Code for Fun.html">Code for Fun</a><li><a href="./SSfMT/Code Examples/MIDI Out Fun.html">MIDI Out Fun</a><li><a href="./SSfMT/Code Examples/MIDI File Fun.html">MIDI File Fun</a><li><a href="./SSfMT/Code Examples/Simple FX.html">Simple FX</a><li><a href="./SSfMT/Code Examples/Synth Fun.html">Synth Fun</a><li><a href="./SSfMT/Code Examples/MIDI Synthesiser.html">MIDI Synthesiser</a><li><a href="./SSfMT/Code Examples/Mixing Things.html">Mixing Things</a></ul>
+<li><a href="./SSfMT/Study Guides/SC Basics Quick Study.html">SC Basics Quick Study</a><li><a href="./SSfMT/Study Guides/Deconstructing SC code.html">Deconstructing SC code</a></ul>
 <h2><a class='anchor' name='Links'>Links</a></h2>
 <ul>
 <li><a href="https://www.mstrcyork.org/">Music, Science and Technology Research Cluster (mstrc)</a><li><a href="https://www.mstrcyork.org/technologies-for-musical-creativity/">Technologies for Musical Creativity Group (TMCG)</a><li><a href="https://algorave.com/">Algoraves</a><li><a href="https://yorkshiresoundwomen.wordpress.com/">Yorkshire Sound Women Network (YSWN)</a></ul>
