fixed yswn link

--- a/SSfMT.html
+++ b/SSfMT.html
@@ -55,6 +55,6 @@
 <li><a href="./SSfMT/Study Guides/SC Basics Quick Study.html">SC Basics Quick Study</a><li><a href="./SSfMT/Study Guides/Deconstructing SC code.html">Deconstructing SC code</a></ul>
 <h2><a class='anchor' name='Links'>Links</a></h2>
 <ul>
-<li><a href="https://www.mstrcyork.org/">Music, Science and Technology Research Cluster (mstrc)</a><li><a href="https://www.york.ac.uk/music/research/music-science-technology/research-groups/technologies-musical-creativity">Technologies for Musical Creativity Group (TMCG)</a><li><a href="https://algorave.com/">Algoraves</a><li><a href="https://yorkshiresoundwomen.wordpress.com/">Yorkshire Sound Women Network (YSWN)</a></ul>
+<li><a href="https://www.mstrcyork.org/">Music, Science and Technology Research Cluster (mstrc)</a><li><a href="https://www.york.ac.uk/music/research/music-science-technology/research-groups/technologies-musical-creativity">Technologies for Musical Creativity Group (TMCG)</a><li><a href="https://algorave.com/">Algoraves</a><li><a href="https://yorkshiresoundwomen.com/">Yorkshire Sound Women Network (YSWN)</a></ul>
 
 <p><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/SSfMT/HelpSource/SSfMT.schelp</a><br>link::SSfMT::<br>sc version: 3.8.0</div></div></body></html>
