--- a/SSfMT/moduleplan.htm
+++ b/SSfMT/moduleplan.htm
@@ -7,7 +7,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link rel=File-List href="moduleplan.fld/filelist.xml">
-<style id="moduleplan_23194_Styles">
+<style id="moduleplan_792_Styles">
 <!--table
 	{mso-displayed-decimal-separator:"\.";
 	mso-displayed-thousand-separator:"\,";}
@@ -648,11 +648,14 @@ tags will be replaced.-->
 <!--START OF OUTPUT FROM EXCEL PUBLISH AS WEB PAGE WIZARD -->
 <!----------------------------->
 
-<div id="moduleplan_23194" align=center x:publishsource="Excel">
+<div id="moduleplan_792" align=center x:publishsource="Excel">
 
 <table border=0 cellpadding=0 cellspacing=0 width=1443 style='border-collapse:
  collapse;table-layout:fixed;width:1079pt'>
- <col width=111 span=13 style='mso-width-source:userset;mso-width-alt:3541;
+ <col width=111 span=5 style='mso-width-source:userset;mso-width-alt:3541;
+ width:83pt'>
+ <col width=111 style='mso-width-source:userset;mso-width-alt:3541;width:83pt'>
+ <col width=111 span=7 style='mso-width-source:userset;mso-width-alt:3541;
  width:83pt'>
  <tr height=35 style='mso-height-source:userset;height:26.0pt'>
   <td height=35 class=xl64 colspan=5 width=555 style='height:26.0pt;mso-ignore:
@@ -729,7 +732,7 @@ tags will be replaced.-->
   <td class=xl69 width=111 style='border-top:none;border-left:none;width:83pt'>Tue
   18.2</td>
   <td class=xl86 width=111 style='border-top:none;border-left:none;width:83pt'>Tue
-  25.2</td>
+  11.3</td>
   <td class=xl112 width=111 style='width:83pt'>Tue 14.4</td>
   <td class=xl72 width=111 style='width:83pt'>Wed 22.4</td>
  </tr>
@@ -737,7 +740,7 @@ tags will be replaced.-->
   <td height=21 class=xl71 width=111 style='height:16.0pt;border-top:none;
   width:83pt'>13:00-14:00</td>
   <td class=xl69 width=111 style='border-top:none;border-left:none;width:83pt'>13:00-14:00</td>
-  <td class=xl97 style='border-top:none;border-left:none'>17:30-21:30</td>
+  <td class=xl97 style='border-top:none;border-left:none'>18:00-21:30</td>
   <td class=xl117 width=111 style='border-top:none;border-left:none;width:83pt'>13:30-17:30</td>
   <td class=xl71 width=111 style='border-top:none;width:83pt'>15:15-17:15</td>
   <td class=xl69 width=111 style='border-top:none;border-left:none;width:83pt'>15:15-17:15</td>
@@ -776,16 +779,16 @@ tags will be replaced.-->
   <td height=21 class=xl71 width=111 style='height:16.0pt;border-top:none;
   width:83pt'>Mon 11.11</td>
   <td class=xl70 width=111 style='border-top:none;border-left:none;width:83pt'>Mon
-  19.11</td>
+  25.11</td>
   <td class=xl99 width=111 style='width:83pt'>&nbsp;</td>
   <td class=xl118 width=111 style='border-left:none;width:83pt'>&nbsp;</td>
-  <td class=xl112 width=111 style='width:83pt'>Thu 17.1</td>
-  <td class=xl74 width=111 style='border-left:none;width:83pt'>Thu 24.1</td>
-  <td class=xl74 width=111 style='border-left:none;width:83pt'>Thu 31.1</td>
-  <td class=xl74 width=111 style='border-left:none;width:83pt'>Thu 7.2</td>
-  <td class=xl74 width=111 style='border-left:none;width:83pt'>Thu 14.2</td>
-  <td class=xl74 width=111 style='border-left:none;width:83pt'>Thu 21.2</td>
-  <td class=xl108 width=111 style='border-left:none;width:83pt'>Thu 14.3</td>
+  <td class=xl112 width=111 style='width:83pt'>Thu 16.1</td>
+  <td class=xl74 width=111 style='border-left:none;width:83pt'>Thu 23.1</td>
+  <td class=xl74 width=111 style='border-left:none;width:83pt'>Thu 30.1</td>
+  <td class=xl74 width=111 style='border-left:none;width:83pt'>Thu 6.2</td>
+  <td class=xl74 width=111 style='border-left:none;width:83pt'>Thu 13.2</td>
+  <td class=xl74 width=111 style='border-left:none;width:83pt'>Thu 20.2</td>
+  <td class=xl108 width=111 style='border-left:none;width:83pt'>Thu 12.3</td>
   <td class=xl114 width=111 style='border-left:none;width:83pt'>&nbsp;</td>
   <td class=xl73 width=111 style='width:83pt'>&nbsp;</td>
  </tr>
