change in moduleplan

--- a/SSfMT/moduleplan.htm
+++ b/SSfMT/moduleplan.htm
@@ -7,7 +7,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
 <link rel=File-List href="moduleplan.fld/filelist.xml">
-<style id="moduleplan_30032_Styles">
+<style id="moduleplan_6343_Styles">
 <!--table
 	{mso-displayed-decimal-separator:"\.";
 	mso-displayed-thousand-separator:"\,";}
@@ -648,7 +648,7 @@ tags will be replaced.-->
 <!--START OF OUTPUT FROM EXCEL PUBLISH AS WEB PAGE WIZARD -->
 <!----------------------------->
 
-<div id="moduleplan_30032" align=center x:publishsource="Excel">
+<div id="moduleplan_6343" align=center x:publishsource="Excel">
 
 <table border=0 cellpadding=0 cellspacing=0 width=1443 style='border-collapse:
  collapse;table-layout:fixed;width:1079pt'>
@@ -779,13 +779,13 @@ tags will be replaced.-->
   25.11</td>
   <td class=xl99 width=111 style='width:83pt'>&nbsp;</td>
   <td class=xl118 width=111 style='border-left:none;width:83pt'>&nbsp;</td>
-  <td class=xl112 width=111 style='width:83pt'>Thu 16.1</td>
-  <td class=xl74 width=111 style='border-left:none;width:83pt'>Thu 23.1</td>
-  <td class=xl74 width=111 style='border-left:none;width:83pt'>Thu 30.1</td>
-  <td class=xl74 width=111 style='border-left:none;width:83pt'>Thu 6.2</td>
-  <td class=xl74 width=111 style='border-left:none;width:83pt'>Thu 13.2</td>
-  <td class=xl74 width=111 style='border-left:none;width:83pt'>Thu 20.2</td>
-  <td class=xl108 width=111 style='border-left:none;width:83pt'>Thu 12.3</td>
+  <td class=xl112 width=111 style='width:83pt'>Fri 17.1</td>
+  <td class=xl74 width=111 style='border-left:none;width:83pt'>Fri 24.1</td>
+  <td class=xl74 width=111 style='border-left:none;width:83pt'>Fri 31.1</td>
+  <td class=xl74 width=111 style='border-left:none;width:83pt'>Fri 7.2</td>
+  <td class=xl74 width=111 style='border-left:none;width:83pt'>Fri 14.2</td>
+  <td class=xl74 width=111 style='border-left:none;width:83pt'>Fri 21.2</td>
+  <td class=xl108 width=111 style='border-left:none;width:83pt'>Fri 12.3</td>
   <td class=xl114 width=111 style='border-left:none;width:83pt'>&nbsp;</td>
   <td class=xl73 width=111 style='width:83pt'>&nbsp;</td>
  </tr>
@@ -795,14 +795,14 @@ tags will be replaced.-->
   <td class=xl70 width=111 style='border-top:none;border-left:none;width:83pt'>14:00-16:00</td>
   <td class=xl99 width=111 style='width:83pt'>&nbsp;</td>
   <td class=xl118 width=111 style='border-left:none;width:83pt'>&nbsp;</td>
-  <td class=xl71 width=111 style='border-top:none;width:83pt'>09:00-11:00</td>
-  <td class=xl69 width=111 style='border-top:none;border-left:none;width:83pt'>09:00-11:00</td>
-  <td class=xl69 width=111 style='border-top:none;border-left:none;width:83pt'>09:00-11:00</td>
-  <td class=xl69 width=111 style='border-top:none;border-left:none;width:83pt'>09:00-11:00</td>
-  <td class=xl69 width=111 style='border-top:none;border-left:none;width:83pt'>09:00-11:00</td>
-  <td class=xl69 width=111 style='border-top:none;border-left:none;width:83pt'>09:00-11:00</td>
-  <td class=xl86 width=111 style='border-top:none;border-left:none;width:83pt'>09:00-11:00</td>
-  <td class=xl114 width=111 style='border-left:none;width:83pt'>&nbsp;</td>
+  <td class=xl71 width=111 style='border-top:none;width:83pt'>14:00-16:00</td>
+  <td class=xl71 width=111 style='border-top:none;width:83pt'>14:00-16:00</td>
+  <td class=xl71 width=111 style='border-top:none;width:83pt'>14:00-16:00</td>
+  <td class=xl71 width=111 style='border-top:none;width:83pt'>14:00-16:00</td>
+  <td class=xl71 width=111 style='border-top:none;width:83pt'>14:00-16:00</td>
+  <td class=xl71 width=111 style='border-top:none;width:83pt'>14:00-16:00</td>
+  <td class=xl71 width=111 style='border-top:none;width:83pt'>14:00-16:00</td>
+  <td class=xl114 width=111 style='width:83pt'>&nbsp;</td>
   <td class=xl73 width=111 style='width:83pt'>&nbsp;</td>
  </tr>
  <tr height=128 style='mso-height-source:userset;height:96.0pt'>
